--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "scripts": {
     "predeploy": "npm run build",
-    "deploy": "gh-pages -b master -d build",
+    "deploy": "gh-pages -b dev -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
